force-app/main/default/objects/Carecloud_Setup__mdt/Carecloud_Setup__mdt.object-meta.xml
<CustomObject>
    <label>Carecloud Setup</label>
    <pluralLabel>Carecloud Setups</pluralLabel>
</CustomObject>