force-app/main/default/objects/Carecloud_Setup__mdt/fields/Breeze_ID__c.field-meta.xml
<CustomField>
    <fullName>Breeze_ID__c</fullName>
    <label>Breeze ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>