force-app/main/default/objects/Carecloud_Setup__mdt/fields/Create_Patient__c.field-meta.xml
<CustomField>
    <fullName>Create_Patient__c</fullName>
    <label>Create Patient</label>
    <length>200</length>
    <type>Text</type>
</CustomField>