force-app/main/default/objects/Carecloud_Setup__mdt/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End Point</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>