force-app/main/default/objects/Carecloud_Setup__mdt/fields/FMS_and_PPT_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>FMS_and_PPT_Folder_Id__c</fullName>
    <label>FMS and PPT Folder Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>