force-app/main/default/objects/Carecloud_Setup__mdt/fields/Insurance_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Folder_ID__c</fullName>
    <label>Insurance Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>