force-app/main/default/objects/Carecloud_Setup__mdt/fields/Intake_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Intake_Folder_ID__c</fullName>
    <label>Intake Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>